Migrerade men det funkade inte

--- a/CV_Projekt/CV_Projekt/appsettings.json
+++ b/CV_Projekt/CV_Projekt/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CvContext": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=CV_Projekt;Integrated Security=SSPI"
+  }
 }
